--- a/_posts/2024-07-03-s1e8.md
+++ b/_posts/2024-07-03-s1e8.md
@@ -22,24 +22,24 @@ tags: [社会情感, 理论框架]
 
 文章指路：[A levels-of-analysis framework for studying social emotions](https://www.nature.com/articles/s44159-024-00285-1)
 
-00:00:59 嘉宾介绍
-00:02:51 研究介绍
-00:21:09 用计算机理论来理解社会情感
-00:24:14 实验室氛围更重要，还是研究者自身努力更重要
-00:30:18 导师、同门合作对投稿的影响
-00:35:27 综述文章和实验文章在投稿上的区别
-00:40:42 期刊选择
-00:42:26 自荐审稿人
-00:45:11 高产文章的秘诀
-00:50:23 角色的转变
-00:51:20 如何平衡自己的节奏
-00:52:45 如何理解“顶刊”
-00:55:16 听众问答
+- 00:00:59 嘉宾介绍
+- 00:02:51 研究介绍
+- 00:21:09 用计算机理论来理解社会情感
+- 00:24:14 实验室氛围更重要，还是研究者自身努力更重要
+- 00:30:18 导师、同门合作对投稿的影响
+- 00:35:27 综述文章和实验文章在投稿上的区别
+- 00:40:42 期刊选择
+- 00:42:26 自荐审稿人
+- 00:45:11 高产文章的秘诀
+- 00:50:23 角色的转变
+- 00:51:20 如何平衡自己的节奏
+- 00:52:45 如何理解“顶刊”
+- 00:55:16 听众问答
 
 关于于宏波博士
 
 2016年在北京大学获得心理学博士学位。博士期间，他在周晓林教授的指导下研究社会情感（例如内疚、感激）的神经基础。获得博士学位后，于宏波博士取得英国科学院牛顿国际奖学金并加入了Molly Crockett教授的团队，先后在牛津大学和耶鲁大学从事博士后研究。他的博士后研究主要集中在道德判断和决策的神经计算机制上。2019年，于宏波博士受聘于加州大学圣塔芭芭拉分校，在心理与脑科学系担任助理教授。
 
-于宏波博士团队致力于通过多学科和跨文化视角了解社会情感与道德认知的神经基础及其个体差异，更多实验室信息搜索YESLAB（Yu Emotion Science Lab at UCSB, https://yeslab.psych.ucsb.edu/）。
+于宏波博士团队致力于通过多学科和跨文化视角了解社会情感与道德认知的神经基础及其个体差异，更多实验室信息搜索YESLAB（[Yu Emotion Science Lab at UCSB](https://yeslab.psych.ucsb.edu/)）。
 
 本节目由 BrainPod脑锅工作室 与 华人计算精神病学联盟 联合出品。
